--- a/home.html
+++ b/home.html
@@ -165,7 +165,7 @@
               <h3><i class="fas fa-briefcase"></i> Work 3</h3>
               <p>AI and Cloud Computing Intern</p>
             <h3>at</h3>
-            <p>IBM</p>
+            <p>Edunet via AICTE</p>
             <h3>from 12/2023 to 01/2024</h3>
           </div>
 
@@ -175,7 +175,7 @@
         <h3><i class="fas fa-briefcase"></i> Work 4</h3>
         <p>Data Analyst Intern</p>
       <h3>at</h3>
-      <p>  Ernst and Young Global Delivery Services</p>
+      <p>  Ernst and Young Global Delivery Services led by AICTE via Edunet</p>
       <h3>from 12/2023 to 02/2024</h3>
     </div>
 
