--- a/home.html
+++ b/home.html
@@ -139,7 +139,7 @@
         </div>
 
 
-        <div class="work">
+                <div class="work">
     <h2>My Work Experience</h2>
 
     <!-- Work 1 -->
@@ -149,6 +149,11 @@
                 <h3>at</h3>
                 <p>IITM</p>
                 <h3>from 10/2024</h3>
+                <h3>Work Responsibilities :</h3>
+                <p>• Modern Application Development I (BSCS2003) - Teaching Assistant <br>
+                    • Modern Application Development I - Project (BSCS2003P) - Handling Gspace & Backend <br>
+                    • Modern Application Development II - Project (BSCS2006P) - Handling Gspace(Till Dec 2024) & Backend<br>
+                   • Viva Examiner for BSCS2003P</p>
               </div>
             
           <div class="work-item">
@@ -157,6 +162,9 @@
             <h3>at</h3>
             <p>Worldquant Brain</p>
             <h3>from 11/2023 to 10/2024</h3>
+            <h3>Work Responsibilities :</h3>
+            <p>• Helped in creating Alphas using machine learning and formulas provided 
+                by them on the dashboard and by manuals.</p>
           </div>
 
           <!-- Work 2 -->
@@ -167,6 +175,10 @@
             <h3>at</h3>
             <p>Edunet via AICTE</p>
             <h3>from 12/2023 to 01/2024</h3>
+            <h3>Work Responsibilities :</h3>
+            <p>• Used Python for comprehensive data analysis of data.<br>
+                
+                • Aided in data preprocessing, visualization, and interpretation.</p>
           </div>
 
           <!-- Work 3 -->
@@ -177,6 +189,10 @@
       <h3>at</h3>
       <p>  Ernst and Young Global Delivery Services led by AICTE via Edunet</p>
       <h3>from 12/2023 to 02/2024</h3>
+      <h3>Work Responsibilities :</h3>
+      <p>  • Acquired AI skills encompassing in machine learning. <br>
+           • Gained hands-on experience in utilizing IBM Cloud platform for AI 
+       applications</p>
     </div>
 
 
